--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -1,2 +1,9 @@
-flake8
-pytest
+name: Python3.9 
+channels:
+  - anaconda
+  - defaults
+dependencies:
+  - numpy
+  - pandas
+  - matplotlib
+  - pip
